# MidiPlayerSFML

./: .gitignore  CMakeLists.txt  README.md
MidiSFML/: CMakeLists.txt  Hello.mid  MYMIDI.mid  main.cpp
MidiSFML.xcodeproj/: project.pbxproj
MidiSFML.xcodeproj/project.xcworkspace/xcuserdata/kovalev.vxx.xcuserdatad/: UserInterfaceState.xcuserstate
MidiSFML.xcodeproj/xcshareddata/xcschemes/: MidiSFML.xcscheme
MidiSFML.xcodeproj/xcuserdata/kovalev.vxx.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
MidiSFML.xcodeproj/xcuserdata/kovalev.vxx.xcuserdatad/xcschemes/: xcschememanagement.plist
MidiSFML/App/: AnimationHandler.cpp  AnimationHandler.hpp  App.cpp  App.hpp  AppPlayerState.cpp  AppPlayerState.hpp  AppStartState.cpp  AppStartState.hpp  AppState.cpp  AppState.hpp  GUI.cpp  GUI.hpp  HorizontalVisAlgorithm.cpp  HorizontalVisAlgorithm.hpp  IVisAlgorithm.hpp  Menu.cpp  Menu.hpp  TextureManager.cpp  TextureManager.hpp  ThreeDVisAlgorithm.cpp  ThreeDVisAlgorithm.hpp  VerticalVisAlgorithm.cpp  VerticalVisAlgorithm.hpp  VisAlgorithm.cpp  VisAlgorithm.hpp
MidiSFML/MidiPlayer/: Chord.cpp  Chord.hpp  MidiGenerator.cpp  MidiGenerator.hpp  MidiPlayer.cpp  MidiPlayer.hpp  Note.cpp  Note.hpp  Parser.cpp  Parser.hpp  Song.cpp  Song.hpp  SongLine.cpp  SongLine.hpp  mNote.hpp
MidiSFML/Utils/: fileSystem.cpp  fileSystem.hpp
MidiSFML/libs/: sfMidi.h
MidiSFML/libs/cxxmidi/: event.hpp  file.hpp  track.hpp
MidiSFML/libs/cxxmidi/guts/: player_base.hpp  simulator.hpp  utils.hpp
MidiSFML/libs/cxxmidi/player/: player_sync.hpp
MidiSFML/libs/fluidsynth/: libfluidsynth.3.1.0.dylib
MidiSFML/libs/sfMidi/: Loader.cpp  Loader.h  Midi.cpp  Midi.h  Music.cpp  Music.h
MidiSFML/res/generatedMidis/: Hello.mid
MidiSFML/res/midis/: BOURREE-1.mid  Ella_Fitgerald_Cry_Me_A_River.mid  MOON.mid  SHOW.mid  Sing, Sing, Sing FAATTTB.mid  The Jazz Police bigband copy.mid  The Jazz Police.mid  chopin-nocturne-op9-no2-violin-and-piano.mid  ludovico_einaudi-una_mattina_ost_intouchables.mid  moonlight_sonata_third_movement.mid  polet_shmelya.mid  ryumka_vodki_na_stole_2.mid  the_choice.mid
MidiSFML/res/txt/: song.txt
